Fix vertical scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -7,5 +7,5 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
